# esp-drone-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-analyzer.toml
.cargo/: config.toml
.cursor/: settings.json
.cursor/plans/: rust_esp-idf_drone_23a06410.plan.md
Firmware/esp-drone/: sdkconfig  sdkconfig.old
Firmware/esp-drone-rs/: .gitignore  Cargo.toml  chip-diode.chip.json  chip-diode.chip.wasm  dc-motor.chip.c  diagram-led.json  diagram.json  mosfet-n.chip.c  rust-analyzer.toml  sdkconfig.defaults  wokwi.toml
Firmware/esp-drone-rs/.cargo/: config.toml
Firmware/esp-drone-rs/chips/: chip-diode.chip.c  dc-motor.chip.json  dc-motor.chip.wasm  mosfet-n.chip.json  mosfet-n.chip.wasm
Firmware/esp-drone-rs/scripts/: build-for-wokwi.sh  build.sh  flash.sh  rust-analyzer.sh
Firmware/esp-drone-rs/src/: main.rs
Firmware/esp-drone-rs/src/board/: elegoo_esp32_wroom32.rs  esplane_v1.rs  mod.rs  motor.rs  profile.rs
Firmware/esp-drone-rs/src/comm/: crtp.rs  mod.rs  serial.rs
Firmware/esp-drone-rs/src/drivers/: mod.rs
Firmware/esp-drone-rs/src/drivers/imu/: mod.rs
Firmware/esp-drone-rs/src/drivers/motors/: bench.rs  meta.rs  mod.rs  slot.rs  wiring.rs
Firmware/esp-drone-rs/src/drivers/power/: mod.rs
Firmware/esp-drone-rs/src/estimation/: fusion.rs  mod.rs
Firmware/esp-drone-rs/src/flight/: mixer.rs  mod.rs  pid.rs  stabilizer.rs
Firmware/esp-drone-rs/src/motors/: mod.rs
Firmware/esp-drone-rs/src/safety/: arming.rs  mod.rs
Firmware/esp-drone-rs/src/sensors/: imu.rs  mod.rs
docs/hardware/: README.md  elegoo-esp32-wroom32.md  wokwi-simulation.md  (+2 more)
